still debugging css bug in my clubs with no clubs selected on smaller screens

--- a/social/src/components/admin/admin.css
+++ b/social/src/components/admin/admin.css
@@ -192,6 +192,9 @@
     background-color: #FF9230;
     overflow-y: auto;
   }
+  .initial-clublist {
+
+  }
 }
 
 @media (min-width: 992px) {
@@ -239,4 +242,13 @@
 
 .full-height {
   height: 100vh;
+}
+
+/* no club selected page */
+.initial-clublist {
+  background-color: lightblue;
+}
+
+.initial-welcome {
+  background-color: lightcoral;
 }
